# Credit-Card-Transaction-Analytics-Warehouse

./: .gitignore  pyproject.toml
log/: setup.py
src/bronze/: transactions.py
src/extract/: transactions.py
utils/: config.py  s3_utils.py
