[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-transaction-analytics-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.37",
    "kaggle>=1.7.4.2",
    "kagglehub>=0.3.12",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["src", "utils", "log"]
